# zero2prod-in-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cross  cross.toml
.github/: rust-ci.yml
.github/workflows/: release.yml  rust-ci.yml
configuration/: base.yaml
docker/: docker-compose.yml  run.md
docker/postgresql/conf/: postgresql.conf
docker/postgresql/initdb/: 01_create_tables.sql
migrations/: 20250525081728_create_subscriptions_table.sql  20250625140704_create_subscription_token_table.sql  20250826052359_create_init_tables.sql
postgresql/conf/: pg_hba.conf
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
