[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
config = "0.15.11"
env_logger = "0.11.8"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
sqlx-cli = "0.8.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
